# randflake

./: .gitignore  AGENTS.md  LICENSE  README.md  bun.lockb  eslint.config.mjs  go.mod  package-lock.json  package.json  pyproject.toml  randflake.go  randflake_test.go  randflake_vectors_test.go  test_vectors.json
.github/scripts/: npm-ci-with-logs.sh
.github/workflows/: ci.yml  ghnpm-publish.yml  jsr-publish.yml  npm-publish-github-packages.yml  npm-publish.yml  python-publish.yml
sparx64/: sparx.go  sparx_test.go
src/: __init__.py  randflake.py  sparx64.py  test_package.py  test_randflake.py  test_sparx64.py
src/randflake/: __init__.py  randflake.py  sparx64.py  test_package.py  test_randflake.py
src/randflake-ts/randflake/: AGENTS.md  jsr.json  package.json  tsconfig.json  vitest.config.ts
src/randflake-ts/randflake/src/: index.bench.ts  index.test.ts  index.ts
src/randflake-ts/sparx64/: AGENTS.md  jsr.json  package.json
src/randflake-ts/sparx64/src/: index.ts
src/randflake.egg-info/: PKG-INFO  SOURCES.txt
