[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "randflake"
version = "1.2.0"
description = "A Python implementation the Randflake ID: a distributed, uniform, unpredictable, unique random ID generator."
authors = [
    {name = "GoSuda"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Repository = "https://github.com/gosuda/randflake"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["*_test.py", "test_*.py"]
