[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "randflake"
version = "1.7.1"
description = "A Python implementation the Randflake ID: a distributed, uniform, unpredictable, unique random ID generator."
authors = [
    {name = "GoSuda"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Repository = "https://github.com/gosuda/randflake"
Issues = "https://github.com/gosuda/randflake/issues"
Homepage = "https://gosuda.org/randflake"

[tool]

[tool.hatch.build.targets.wheel]
packages = ["src/randflake"]
